# MultiViews

./: CMakeLists.txt  DynamicSplitView.qml  SplitViewItemDelegate.qml  main.cpp  main.qml  qml.qrc
src/: MyVtkItem.cpp  MyVtkItem.h  Presenter.cpp  Presenter.h  QQuickVtkItem.cpp  QQuickVtkItem.h  Vector3D.cpp  Vector3D.h  vtkFrenetSerretFrame.cpp  vtkFrenetSerretFrame.hpp  vtkSplineDrivenImageSlicer.cpp  vtkSplineDrivenImageSlicer.hpp
